@@ -2,6 +2,13 @@
 
 	* src/sj-main.c:
 	* src/sound-juicer.h:
+	* src/sj-play.c:
+	Add a PAUSED track state (#518760, thanks Brian Geppert)
+
+2008-02-27  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-main.c:
+	* src/sound-juicer.h:
 	Don't create custom stock items when we can use the system ones.
 
 2008-02-26  Ross Burton  <ross@burtonini.com>
